--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.4",
+    "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^4.11.4",
+    "material-ui-rating": "^4.0.0-beta.2",
     "react": "^16.8.0",
     "react-bootstrap": "^1.0.0",
     "react-datepicker": "^4.2.1",
